# mediasorter

./: .gitignore  .python-version  LICENSE  README.md  setup.cfg
src/mediasorter/: __init__.py  console.py  sorter.py
tests/: test_console.py
