[metadata]
name = mediasorter
version = attr: mediasorter.__version__
description = A tool to sort and copy images/videos to a defined directory structure.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shireenrao/mediasorter
author = Srinivas Nyayapati
author_email = shireenrao@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir = 
    = src
packages = find:
install_requires =
    click>=8.0.3
    tqdm>=4.62.3
    filetype
    exifread
    pillow
    hachoir
python_requires = >=3.6.1

[options.packages.find]
where = src
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    mediasorter = mediasorter.console:main

[options.extras_require]
test = pytest

[bdist_wheel]
universal = True